# rust_template

./: Cargo.toml
.github/workflows/: rust.yml
lib-a/: Cargo.toml  lib.rs
lib-b/: Cargo.toml  lib.rs
src/: main.rs
tests/: Cargo.toml  beginner_tests.rs  beginner_tests_02.rs  test_containers_01.rs
